# learnopengl

./: .gitignore  README.md  flake.nix
empty_window/: CMakeLists.txt
empty_window/include/glad/: glad.h
empty_window/src/: CMakeLists.txt  empty_window.cpp  glad.c
